tests/ui/associated-type-bounds/return-type-notation/bare-path.stderr
error: return type notation not allowed in this position yet
  --> $DIR/bare-path.rs:12:23
   |
LL |     let _ = T::CONST::(..);
   |                       ^^^^

error: return type notation not allowed in this position yet
  --> $DIR/bare-path.rs:14:12
   |
LL |     let _: T::method(..);
   |            ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

